[package]
name = "salt-syntax-ast"
version = "0.1.0"
authors = ["Eric McCorkle <eric@metricspace.net>"]

[dependencies]
enum-map = { version = "*" }
langtools-common = { version = "*", git = "https://github.com/saltlang/langtools-common", branch = "devel" }
salt-syntax-common = { version = "*", git = "https://github.com/saltlang/salt-syntax-common", branch = "devel" }

